# Simple_C_Chat

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
components/: CMakeLists.txt
components/list/: CMakeLists.txt
components/list/include/: debug.h  list.h
components/list/src/: CMakeLists.txt  list_adders.c  list_movers.c  list_removers.c  queue.c
components/list/test/: CMakeLists.txt  testList.c  testQueue.c
components/queue/: CMakeLists.txt
components/queue/include/: queue.h
components/queue/src/: queue.c
components/queue/test/: CMakeLists.txt  testQueue.c
config/: simpleCChatConfig.h.in
include/: helloWindows.h  linuxChatThreads.h  simpleCChatConfig.h  simpleChatProtocol.h  socketHelpers.h  windowsChatThreads.h
src/: CMakeLists.txt  helloWindows.c  helloWorld.c  helloWorld.h  linuxChatThreads.c  main.c  simpleChatProtocol.c  socketHelpers.c
test/: CMakeLists.txt  testHelloWorld.c
